# ROS-based-Walking-Pattern-Generation-for-Humanoid-Robot-by-using-Coupled-Oscillator

./: CMakeLists.txt  README.md  package.xml
Parameter/: Continuous_Parameter.ini  Single_Parameter.ini  Trajectory_Record.xls  Trajectory_Record_n1000.ods  Trajectory_Record_n1000y.ods  Trajectory_Record_p1000y.ods
README/: ROS-based-Walking-Pattern-Generation-for-Humanoid-Robot-by-using-Coupled-Oscillator - 捷徑.lnk
inversekinematics/: CMakeLists.txt
inversekinematics/classInfo/: classinfo.cpp  classinfo.hpp
inversekinematics/common/: Strategy.cpp  Strategy.hpp
inversekinematics/node/: ros.cpp  ros.hpp
msg/: Interface.msg
srv/: Serial.srv  Update.srv
walkingcycle/: CMakeLists.txt
walkingcycle/classInfo/: classinfo.cpp  classinfo.hpp
walkingcycle/common/: Strategy.cpp  Strategy.hpp
walkingcycle/node/: ros.cpp  ros.hpp
walkingtrajectory/: CMakeLists.txt
walkingtrajectory/classInfo/: classinfo.cpp  classinfo.hpp
walkingtrajectory/common/: Strategy.cpp  Strategy.hpp
walkingtrajectory/node/: ros.cpp  ros.hpp
