<?xml version="1.0"?>
<package>
  <name>walkinggait</name>
  <version>0.2.8</version>
  <description>

     description.

  </description>
  <maintainer email="shengru@todo.todo">shengru</maintainer>
  <license>BSD</license>

  <author>Shengru Xiao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

</package>
